--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .loader {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
@@ -10,4 +10,7 @@
   justify-content: center;
   background-color: #fff;
   z-index: 9;
+}
+.section.py-5 {
+  position: relative;
 }
