--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,38 @@
-.loader {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 100vh;
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #fff;
-  z-index: 9;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
-.section.py-5 {
-  position: relative;
+
+.App-link {
+  color: #61dafb;
 }
-.nav-link
-{
-  text-transform: capitalize;
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
